--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,11 @@
   color: #666;
 }
 
+.app-main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1rem;
+}
+
